# baremetals

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_add_withdrawal_number.py  e2a22f0b82bb_initial_schema.py
app/: auth.py  config.py  database.py  deps.py  main.py  price_client.py  seed.py
app/models/: __init__.py  account.py  deposit.py  enums.py  metal_price.py  system_config.py  vault.py  withdrawal.py
app/routers/: accounts.py  auth.py  config.py  deposits.py  portfolio.py  prices.py  vaults.py  withdrawals.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: Layout.tsx  ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: LoginPage.tsx
frontend/src/pages/admin/: AccountsPage.tsx  ConfigPage.tsx  PricesPage.tsx  ReportsPage.tsx  VaultsPage.tsx
frontend/src/pages/client/: PortfolioPage.tsx
frontend/src/pages/ops/: ClientsPage.tsx  DepositPage.tsx  OpsVaultsPage.tsx  WithdrawalPage.tsx
openspec/: project.md
openspec/changes/build-backend/: proposal.md  tasks.md
openspec/changes/build-backend/specs/accounts/: spec.md
openspec/changes/build-backend/specs/auth/: spec.md
openspec/changes/build-frontend/: proposal.md  tasks.md
tests/: conftest.py  factories.py  test_accounts.py  test_auth.py  test_config.py  test_deposits.py  test_portfolio.py  test_prices.py  test_setup.py  test_vaults.py  test_withdrawals.py
(+11 files in other folders)
